chore: reformatting project